--- a/public/views/start.html
+++ b/public/views/start.html
@@ -24,3 +24,11 @@
 <a ui-sref="moscowMap">
     <button class="btn btn-warning btn-block">Moscow Map</button>
 </a>
+
+<a ui-sref="wickedDemo">
+    <button class="btn btn-warning btn-block">Wicked Demo</button>
+</a>
+
+<a ui-sref="wickedDemo2">
+    <button class="btn btn-warning btn-block">Wicked Demo2</button>
+</a>
